# MindFlow-CLI

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
mindflow_cli/: __init__.py  __main__.py  cli.py  config.py  exporter.py  llm_client.py  models.py  search_engine.py  storage.py  template_manager.py  tui.py  utils.py  workflow_engine.py
tests/: __init__.py  test_exporter.py  test_models.py  test_search_engine.py  test_storage.py  test_workflow_engine.py
