[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mindflow-cli"
version = "1.0.0"
description = "Lightweight AI Knowledge Workflow Automation Engine"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "gitstq", email = ""},
]
keywords = ["mindflow", "knowledge", "workflow", "automation", "ai", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
]

[project.scripts]
mindflow = "mindflow_cli.cli:main"

[project.urls]
Homepage = "https://github.com/gitstq/mindflow-cli"
"Bug Reports" = "https://github.com/gitstq/mindflow-cli/issues"
Source = "https://github.com/gitstq/mindflow-cli"

[tool.setuptools]
packages = {find = {exclude = ["tests", "tests.*", "docs", "docs.*"]}}
include-package-data = true

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["mindflow_cli"]
omit = ["tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
]
